--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load socialaccount %}
 {# mysite/templates/base.html #}
 
 <!DOCTYPE html>
@@ -11,10 +12,12 @@
     <div id="header">  {# header begins here #}
       <ul id="control-bar">
       {% if user.is_authenticated %}
-       {% if user.is_staff %}<li><a href="{% url 'admin:index' %}">admin</a></li>{% endif %}
-        <li><a href="{% url 'logout' %}">logout</a></li>
-       {% else %}
-        <li><a href="{% url 'login' %}">login</a></li>
+        <li>Hello {{ user.username }} </li>
+        {% if user.is_staff %}<li><a href="{% url 'admin:index' %}">admin</a></li>{% endif %}
+          <li><a href="{% url 'logout' %}">logout</a></li>
+        {% else %}
+          <li><a href="{% url 'account_login' %}">login</a></li>
+          <li><a href="{% provider_login_url 'github' %}">Sign Up</a></li>
       {% endif %}
       </ul>
      </div>              {# header ends here #}
